Remove "mdd" target from installed libs
It's just a bunch of object files
that get built into the cal, cmu, and cu libs.

Why is it not a static library like glu?
Not sure. That is a mystery for another day.

https://github.com/grencez/protocon/issues/12

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -328,7 +328,7 @@ target_include_directories(cu PRIVATE
   )
 
 
-install(TARGETS glu mdd cal cmu cu
+install(TARGETS glu cal cmu cu
   ARCHIVE DESTINATION lib
   LIBRARY DESTINATION lib)
 install(FILES
